# Webtalk

./: .gitignore  Cargo.toml  Dockerfile_mid  Dockerfile_start  build.sh  docker-compose.yml  log4rs.yaml  readme.md  readme_cn.md
cert/: cert.key  cert.pem
deploy/: config-global  sources.list  sources_noble.list
examples/: udp_tester.rs
src/: codec.rs  errors.rs  handler_ws.rs  lib.rs  main.rs  midware.rs  mq.rs  routes.rs  stun.rs  turn.rs  utils.rs
src/handlers/: default.rs.bk  es_streamer.rs  http_conf.rs  mod.rs  mp4_streamer.rs  publish.rs  restrict.rs.bk  subscribe.rs
src/processor/: channel_io.rs  jitter.rs  mod.rs  opus2aac.rs  rbsp.rs  vp9.rs
src/processor/es/: h264.rs  mod.rs  opus.rs
src/processor/mp4/: aac.rs  h264.rs  mod.rs
static/: capture.html  channel.html  channel_codec.html  channel_display.html  channel_local_recv.html  channel_local_send.html  channel_svc.html  channel_vpx.html  display copy 2.html  display copy.html  display.html  fmp4.html  helper.js  index.html  meeting.html  mirror.html  p2p.html  pull.worker.es.js  pull.worker.media.js  push.worker.audio.js  push.worker.video.js  screenshare.html  test.h264  test.html  webcodec.html
