[package]
name = "webtalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "webtalk"
path = "src/lib.rs"

[dependencies]
# actix-web = "4.3"
actix-web = { version = "4.3", features = ["openssl"] }
# actix-rt = "2.11"
bytes = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
trackable = "1.2.0"
serde_json = "1.0.91"
log = "0.4.17"
# env_logger = "0.11"
log4rs = "1.2.0"

# 用于测试
tokio = { version = "1.25", features = [
    "net",
    "io-util",
    "macros",
    "sync",
    "rt",
] }

lazy_static = "1.4.0"
# log4rs = "1.2.0"
# chrono = { version = "^0.4.23", features = ["serde"] }
actix-cors = "0.6.4"
actix-files = "0.6.2"
dotenv = "0.15.0"
rand = "0.8.5"
base64 = "0.13.0"
futures = { version = "^0.3.26", features = ["executor", "thread-pool"] }
futures-util = "0.3.31"
stun_codec = "0.3.5"
num_cpus = "1.15.0"
actix-web-actors = "4.2.0"

webrtc = "0.14"
mse_fmp4 = "0.2"
# mse_fmp4 = { version = "0.2", path = "./crate/mse_fmp4" }
# h264-parser = "0.4"
h264-reader = "0.8"
bitstream-io = "1.7"
audiopus = "0.3.0-rc.0"
fdk-aac = "0.8"
# webrtc = { version = "0.14", path = "./crate/webrtc/webrtc" }

sdp = "0.5.3"
regex = "1.7.1"
# serde_yaml = "0.9.17"
rustun = "0.5"
fibers_global = "0.1.2"
openssl = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
# rdkafka = { version = "0.34", features = ["cmake-build"] }

# # libffi = { version = "3.0.0", features = ["system"] }

# hyper = { version = "0.14.17", features = ["client", "http1", "http2"] }
# rsmpeg = { version = "0.14.1", features = ["link_system_ffmpeg"] }
# # ffmpeg4-ffi = { path = "./crates/ffmpeg4-ffi", package = "ffmpeg4-ffi", version = "0.3.8" }
# nvml-wrapper = "0.9.0"

# minio-rs = { path = "./crates/minio", version = "0.1.0" }
# redis = { version = "0.23", features = ["aio", "async-std-comp"] }

# # actix-broker = "0.4.3"
# actix-web-actors = "4.2.0"
actix = "0.13.0"
# # mp4 = "0.13.0"  

# rdkafka = { version = "0.34", features = ["cmake-build"] }
# r2d2 = "^0.8.10"
# derive_more = "0.99.0"
# reqwest = { version = "0.11.20", features = ["default", "blocking"] }
# sysinfo = "0.29.0"

# bitstream-io = "1.7"
memchr = "2.1.1"
rust-crypto = "^0.2"
anyhow = "1"
# str0m = { version = "0.12", path = "./crate/str0m" }

[dev-dependencies]
clap = "3"
env_logger = "0.11"

[features]
fmp4 = []
es = []
log = []
